# pointcloud

./: README.md
final/: CMakeLists.txt
final/data/: stadium_full.pcd
final/include/: pcl_utils.h
final/src/: main.cpp  pcl_utils.cpp
